<resources>
    <string name="app_name">Task Manager</string>

    <string name="tl_tasks">Задачи</string>
    <string name="tl_productivity">Продуктивность</string>

    <string name="action_write_mail">Write Mail</string>

    <string name="et_task_name">Название</string>
    <string name="tv_priority">Приоритет</string>

    <string name="tvDot">•</string>
    <string name="iv_empty_page">Empty page image</string>
    <string name="tv_empty_page">Вы все сделали на сегодня!</string>
    <string name="tv_empty_page2">Наслаждайтесь свободным вечером.</string>

    <string name="tv_priority_text">Приоритет</string>
    <string name="btn_priority4">Приоритет 4</string>
    <string name="btn_priority3">Приоритет 3</string>
    <string name="btn_priority2">Приоритет 2</string>
    <string name="btn_priority1">Приоритет 1</string>
    <string name="btn_cancel">Отмена</string>
    <string name="tv_tasks_done">задач выполнено</string>

    <string-array name="days_array">
        <item>su</item>
        <item>mo</item>
        <item>tu</item>
        <item>we</item>
        <item>th</item>
        <item>fr</item>
        <item>sa</item>
    </string-array>
</resources>
